[package]
edition      = "2024"
name         = "esp_csi_hackathon"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp_csi_hackathon"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32c2", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c2"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c2"] }

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.8.0"
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
embassy-executor = { version = "0.7.0", features = [] }
embassy-time = "0.4.0"
esp-wifi = { version = "0.15.0", features = [
  "ble",
  "coex",
  "esp-alloc",
  "esp32c2",
  "smoltcp",
  "wifi",
  "sniffer",
  "csi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
esp-csi-rs = "0.3.0"
esp-println = { version = "0.15.0", features = ["esp32c2", "critical-section"] }
esp-backtrace = { version = "0.17.0", features = ["esp32c2", "exception-handler", "panic-handler", "println"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
